--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
         <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
-            src="images/easy.webp 1x, images/easy@2x.webp 2x"
+            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            src="images/easy.jpg 1x, images/easy@2x.jpg 2x"
+            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
           />
           <img class="feature__image" src="images/easy@2x.jpg" alt="" />
         </picture>
@@ -206,11 +206,11 @@
         <picture data-aos="zoon-in-right">
           <source
             type="image/webp"
-            src="images/fast.webp 1x, images/fast@2x.webp 2x"
+            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            src="images/fast.jpg 1x, images/fast@2x.jpg 2x"
+            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
           />
           <img class="feature__image" src="images/fast@2x.jpg" alt="" />
         </picture>
@@ -233,11 +233,11 @@
         <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
-            src="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
+            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            src="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
+            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
           />
           <img class="feature__image" src="images/wordpress@2x.jpg" alt="" />
         </picture>
@@ -260,11 +260,11 @@
         <picture data-aos="zoom-in-right">
           <source
             type="image/webp"
-            src="images/support.webp 1x, images/support@2x.webp 2x"
+            srcset="images/support.webp 1x, images/support@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            src="images/support.jpg 1x, images/support@2x.jpg 2x"
+            srcset="images/support.jpg 1x, images/support@2x.jpg 2x"
           />
           <img class="feature__image" src="images/support@2x.jpg" alt="" />
         </picture>
@@ -390,12 +390,12 @@
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Website Hosting</a></li>
@@ -405,12 +405,12 @@
           </div>
         </section>
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">About</a></li>
@@ -420,12 +420,12 @@
           </div>
         </section>
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Contact</a></li>
@@ -435,12 +435,12 @@
           </div>
         </section>
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Dpmain Checker</a></li>
@@ -449,10 +449,10 @@
             </ul>
           </div>
         </section>
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Pranay Bura</p>
-        </section>
+        </div>
       </div>
     </footer>
 
